Feat: 게시물 상세 페이지에 거래완료 표시

--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -199,6 +199,13 @@
             display: none;
             z-index: -100;
         }
+        .sold {
+            padding: 10px;
+            background-color: black;
+            color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+        }
     </style>
     <meta charset="utf-8">
 </head>
@@ -244,7 +251,11 @@
     </div>
 
     <div class="row">
-        <span th:text="${item.title}"></span>
+        <span>
+            <span class="sold" th:if="${item.status.equals('SOLD')}">
+                거래완료
+            </span>
+            [[${item.title}]]</span>
         <span>[[${item.price}]]원</span>
     </div>
     <div class="row">
