--- a/src/main/resources/templates/items/upload.html
+++ b/src/main/resources/templates/items/upload.html
@@ -107,7 +107,7 @@
                 <div class="item_img" id="image_container">
                     <label for="images" class="img_upload_button">
                         <input type="file" name="images" id="images" style="display: none" multiple/>
-                        <img src="img/karrot.png"/>
+                        <img src="/img/plus.png"/>
                     </label>
 
                 </div>
@@ -125,7 +125,7 @@
 
                     </option>
                 </select>
-                <input name="category" placeholder="카테고리" style="display: none"/>
+                <input name="category" placeholder="카테고리" th:value="${categories[0].name()}" style="display: none"/>
             </div>
             <div class="row">
                 <input type="number" name="price" placeholder="가격(원)"/>
@@ -185,7 +185,7 @@
 
         const files = document.getElementsByName('images')[0].files;
         for (let i = 0 ; i < files.length ; i++){
-            formData.append("uploadImages", files[i]);
+            formData.append("uploadImages[]", files[i]);
         }
         formData.append('title', getValueByName('title'));
         formData.append('mainText', getValueByName('mainText'));
