Fix: 이미지 path 수정

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -111,10 +111,10 @@
         <span class="place">나의 당근</span>
         <span class="img_container">
             <button>
-                <img src="img/search.png"/>
+                <img src="/img/search.png"/>
             </button>
             <button>
-                <img src="img/menu.png" />
+                <img src="/img/menu.png" />
             </button>
         </span>
     </div>
@@ -140,12 +140,12 @@
         <div class="local-nav-links">
             <div class="local-nav-items">
                 <button onclick="location.href='/items'">
-                    <img src="img/home_filled.png" />
+                    <img src="/img/home_filled.png" />
                 </button>
             </div>
             <div class="local-nav-items">
                 <button onclick="location.href='/my-page'">
-                    <img src="img/person.png" />
+                    <img src="/img/person.png" />
                 </button>
             </div>
         </div>
