Fix: 중고물품 리스트 순환참조 문제 수정
ItemDto -> ItemPreviewDto 변경

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -151,28 +151,27 @@
             <div th:each="item : ${items}" th:onclick="'location.href=\'' + '/items/' + @{${item.id}} + '\''"
                  th:id="${item.id}" class="item">
                 <span class="item_img">
-                    <img th:if="${item.images.size() == 0}" src="/img/karrot.png"/>
-                    <img th:if="${item.images.size() != 0}" th:src="${item.images[0].path}"/>
+                    <img th:src="${item.thumbnailPath == null ? '/img/karrot.png' : item.thumbnailPath}"/>
                 </span>
                 <div class="item_explain">
                     <div class="item_text">
                         <div th:text="${item.title}"></div>
                         <div th:text="${item.place}">Place</div>
                         <div>
-                            <span class="sold" th:if="${item.status.equals('SOLD')}">
+                            <span class="sold" th:if="${item.status.name().equals('SOLD')}">
                                 거래완료
                             </span>
                             [[${item.price}]]원
                         </div>
                     </div>
                     <div class="item_preference">
-                        <span th:if="${item.comments.size() != 0}">
+                        <span th:if="${item.commentCount != 0}">
                             <img src="/img/chat.png" />
-                            [[${item.comments.size()}]]
+                            [[${item.commentCount}]]
                         </span>
-                        <span th:if="${item.interests.size() != 0}">
+                        <span th:if="${item.interestCount != 0}">
                             <img src="/img/heart.png" />
-                            [[${item.interests.size()}]]
+                            [[${item.interestCount}]]
                         </span>
                     </div>
                 </div>
@@ -216,6 +215,7 @@
         .catch((e) => console.error(e));
     }
     const drawList = (list) => {
+        console.log(list)
         if (list == null || list.length == 0){
             return;
         }
@@ -231,7 +231,7 @@
             $item_img = document.createElement('span');
             $item_img.classList.add("item_img");
             $img = document.createElement('img');
-            $img.src = item.images.length == 0 ? '/img/karrot.png' : item.images[0].path;
+            $img.src = item.thumbnailPath == null ? '/img/karrot.png' : item.thumbnailPath;
             $item_img.appendChild($img);
             $item.appendChild($item_img);
 
@@ -262,21 +262,21 @@
             $item_preference = document.createElement('div');
             $item_preference.classList.add('item_preference');
 
-            if (item.comments.length != 0){
+            if (item.commentCount != 0){
                 $comments = document.createElement('span');
                 $comment_img = document.createElement('img');
                 $comment_img.src = '/img/chat.png';
                 $comments.appendChild($comment_img);
-                $comments.textContent = item.comments.length;
+                $comments.textContent = item.commentCount;
                 $item_preference.appendChild($comments);
             }
 
-            if (item.interests.length !== 0){
+            if (item.interestCount.length !== 0){
                 $interests = document.createElement('span');
                 $interests_img = document.createElement('img');
                 $interests_img.src = '/img/heart.png';
                 $interests.appendChild($interests_img);
-                $interests.textContent = item.interests.length;
+                $interests.textContent = item.interestCount
                 $item_preference.appendChild($interests);
             }
             $item_explain.appendChild($item_preference);
