Fix: 관심목록 거래완료 표기 변경

--- a/src/main/resources/templates/items/my-interest.html
+++ b/src/main/resources/templates/items/my-interest.html
@@ -115,7 +115,7 @@
                             <div th:text="${item.title}"></div>
                             <div th:text="${item.place}">Place</div>
                             <div>
-                                <span class="sold" th:if="${!item.status.equals('SOLD')}">
+                                <span class="sold" th:if="${item.status.equals('SOLD')}">
                                     거래완료
                                 </span>
                                 &nbsp;&nbsp;[[${item.price}]]원
