--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -206,6 +206,13 @@
             padding-left: 20px;
             border-radius: 10px;
         }
+        .reserved {
+            padding: 10px;
+            background-color: lightseagreen;
+            color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+        }
     </style>
     <meta charset="utf-8">
 </head>
@@ -252,6 +259,9 @@
 
     <div class="row">
         <span>
+            <span class="reserved" th:if="${item.status.equals('RESERVED')}">
+                예약중
+            </span>
             <span class="sold" th:if="${item.status.equals('SOLD')}">
                 거래완료
             </span>
