--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -131,6 +131,13 @@
             padding-left: 20px;
             border-radius: 10px;
         }
+        .reserved {
+            padding: 10px;
+            background-color: lightseagreen;
+            color: white;
+            padding-left: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -158,6 +165,9 @@
                         <div th:text="${item.title}"></div>
                         <div th:text="${item.place}">Place</div>
                         <div>
+                            <span class="reserved" th:if="${item.status.name().equals('RESERVED')}">
+                                    예약중
+                                </span>
                             <span class="sold" th:if="${item.status.name().equals('SOLD')}">
                                 거래완료
                             </span>
