Feat: 마이페이지에서 카테고리 선택 버튼 추가

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -113,7 +113,7 @@
             <button>
                 <img src="/img/search.png"/>
             </button>
-            <button>
+            <button onclick="location.href='/items/categories'">
                 <img src="/img/menu.png" />
             </button>
         </span>
