Fix: 리스트 제목 추가
기존에는 본문이 나오는 오류

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -251,7 +251,7 @@
             $item_text = document.createElement('div');
             $item_text.classList.add('item_text');
             $title = document.createElement('div');
-            $title.textContent = item.mainText;
+            $title.textContent = item.title;
             $item_place = document.createElement('div');
             $item_place.textContent = item.place;
 
