--- a/src/main/resources/templates/comments/writing.html
+++ b/src/main/resources/templates/comments/writing.html
@@ -100,6 +100,8 @@
             xhr.onload = function() {
                 if (xhr.status === 200 || xhr.status === 201) {
                     window.history.back();
+                } else {
+                    alert(xhr.responseText);
                 }
             };
             /*댓글추가 백엔드짜기*/
@@ -113,6 +115,8 @@
             xhr.onload = function() {
                 if (xhr.status === 200 || xhr.status === 201) {
                     window.history.back();
+                } else {
+                    alert(xhr.responseText);
                 }
             };
             /*댓글추가 백엔드짜기*/
