--- a/src/main/resources/templates/items/item-edit.html
+++ b/src/main/resources/templates/items/item-edit.html
@@ -208,10 +208,9 @@
 
         xhr.onload = function() {
             if (xhr.status === 200 || xhr.status === 201) {
-                console.log(xhr.responseText);
                 location.href = "/items/" + [[${item.id}]];
             } else {
-                console.error(xhr.responseText);
+                alert(xhr.responseText);
             }
         };
         xhr.open('PUT', '/api/items/' + [[${item.id}]]);
