Fix: image type param 수정

--- a/src/main/resources/templates/user/editProfile.html
+++ b/src/main/resources/templates/user/editProfile.html
@@ -210,7 +210,7 @@
             let xhr = new XMLHttpRequest();
             let formData = new FormData();
 
-            formData.append('type', 'user_profile');
+            formData.append('type', 'USER_PROFILE');
 
             xhr.onload = function() {
                 if (xhr.status === 200 || xhr.status === 201) {
